--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -2,8 +2,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&amp;display=swap"
       rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&amp;display=swap" rel="stylesheet">
-<link href="/assets/css/bootstrap.css" rel="stylesheet">
-<link href="/assets/css/fontawesome-all.css" rel="stylesheet">
-<link href="/assets/css/swiper.css" rel="stylesheet">
-<link href="/assets/css/magnific-popup.css" rel="stylesheet">
-<link href="/assets/css/styles.css" rel="stylesheet">
+<link href="assets/css/bootstrap.css" rel="stylesheet">
+<link href="assets/css/fontawesome-all.css" rel="stylesheet">
+<link href="assets/css/swiper.css" rel="stylesheet">
+<link href="assets/css/magnific-popup.css" rel="stylesheet">
+<link href="assets/css/styles.css" rel="stylesheet">
