Ajust assets and styles urls

--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <p class="p-small">Copyright © <a target="_blank" href="https://theresilient.dev">The Resilient Dev</a>
+                <p class="p-small">Copyright © <a target="_blank" href="https://www.linkedin.com/in/bienvenu-agbavon/">The Authentic Dev</a>
                 </p>
             </div>
             <!-- end of col -->
