--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,29 +10,7 @@
                     </p>
                 </div>
                 <!-- end of footer-col -->
-                <div class="footer-col second">
-                    <h6>Articles</h6>
-                    <ul class="list-unstyled li-space-lg p-small">
-                        <li>
-                            <a target="_blank" href="/">
-                                Article 1
-                            </a>
-                    </ul>
-                </div>
-                <!-- end of footer-col -->
                 <div class="footer-col third">
-                        <span class="fa-stack">
-                            <a target="_blank" href="https://www.facebook.com/noirmeilleurpage/">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x"></i>
-                            </a>
-                        </span>
-                    <span class="fa-stack">
-                            <a target="_blank" href="https://twitter.com/noir___meilleur">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x"></i>
-                            </a>
-                        </span>
                     <span class="fa-stack">
                             <a target="_blank" href="https://www.instagram.com/noir___meilleur/">
                                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -40,7 +18,7 @@
                             </a>
                         </span>
                     <span class="fa-stack">
-                            <a target="_blank" href="mailto:contact@theresilient.dev">
+                            <a target="_blank" href="mailto:agbavonbienvenu@gmail.com">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-inbox fa-stack-1x"></i>
                             </a>
