--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,17 +1,17 @@
 <!-- Scripts -->
-<script src="/assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.min.js"></script>
 <!-- jQuery for Bootstrap's JavaScript plugins -->
-<script src="/assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 <!-- Bootstrap framework -->
-<script src="/assets/js/jquery.easing.min.js"></script>
+<script src="assets/js/jquery.easing.min.js"></script>
 <!-- jQuery Easing for smooth scrolling between anchors -->
-<script src="/assets/js/swiper.min.js"></script>
+<script src="assets/js/swiper.min.js"></script>
 <!-- Swiper for image and text sliders -->
-<script src="/assets/js/jquery.magnific-popup.js"></script>
+<script src="assets/js/jquery.magnific-popup.js"></script>
 <!-- Magnific Popup for lightboxes -->
-<script src="/assets/js/morphext.min.js"></script>
+<script src="assets/js/morphext.min.js"></script>
 <!-- Morphtext rotating text in the header -->
-<script src="/assets/js/scripts.js"></script>
+<script src="assets/js/scripts.js"></script>
 <!-- Custom scripts -->
 <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 <script>
